@@ -1,3 +1,13 @@
+Sun Jun 24 17:51:49 EDT 2007
+	* tracker_voice.cpp(add_to_mix_buffer): Added use of the GMP
+	library. It turns out that even the small amount of fixed-point
+	math used here may cause an integer overflow. On 32-bit systems,
+	it is possible to simply use 64-bit integers, so #ifdefs were put
+	in to that effect. Systems with sizeof(size_t) == sizeof(Uint64)
+	need GMP.
+
+	* SConstruct, detect,py: Updated to detect the need for GMP.
+
 Sun Jun 24 02:12:38 EDT 2007 J Phelps <godless@users.sf.net>
 	* tracker_voice.cpp(add_to_mix_buffer)
 	  sample_data_fixedpoint.h(fixedpoint_loop)
